# everec

./: .gitignore  .vercelignore  AGENTS.md  Cargo.toml  README.md  package-lock.json  package.json  start-simcut.sh  vercel.json
api/: [[...route]].ts  _entry.ts  index.js  index.ts  test.ts
api/knowgo/: index.ts
api/prerector/: index.ts
api/scripts/: build-vercel-api.mjs  build-vercel-subapis.mjs
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/src/: main.rs
apps/desktop/ui/src/: App.tsx
apps/desktop/ui/src/components/export/: ExportDialog.tsx
apps/desktop/ui/src/components/timeline/: Timeline.tsx
apps/desktop/ui/src/lib/: soundDesign.ts
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: lib.rs
crates/instruments/: Cargo.toml
desktop-client/crates/audio-engine/src/: error.rs
desktop-client/crates/instruments/src/: catalog.rs  lib.rs  note.rs
desktop-client/src/: audio_service.rs  lib.rs
desktop-client/ui/src/: index.css
desktop-client/ui/src/lib/: tauri.ts
desktop-client/ui/src/views/: LibraryView.tsx
desound/: README.md
desound/apps/desktop/: package.json
desound/apps/desktop/src/: lib.rs  library_fetch.rs
desound/crates/audio-engine/src/: mixer.rs
desound/desktop/: Cargo.toml  package-lock.json
desound/desktop/crates/instruments/src/: preset.rs  voice.rs
desound/desktop/src/: lib.rs  library_fetch.rs  sound_design.rs
desound/desktop/ui/: package.json  vite.config.ts
desound/desktop/ui/src/: App.tsx  types.ts
desound/desktop/ui/src/components/compose/: ComposeTimeline.tsx  MasterOverview.tsx  NotePickerModal.tsx  PianoRoll.tsx
desound/desktop/ui/src/components/layout/: BottomToolBar.tsx  TransportBar.tsx
desound/desktop/ui/src/lib/: api.ts  foley.ts  musicFetch.ts  tauri.ts
desound/desktop/ui/src/views/: ComposeView.tsx  DesignView.tsx  LibraryView.tsx  ProcessingView.tsx  ProjectsView.tsx
desound/web/backend/: package.json
desound/web/backend/src/: app.ts
desound/web/frontend/: package-lock.json  tsconfig.json  vite.config.ts
desound/web/frontend/src/: App.tsx  index.css  types.ts
docs/: PRD.md
hub/: README.md
hub/web/frontend/: index.html  package.json  vite.config.ts
hub/web/frontend/src/: App.tsx  index.css  types.ts
knowgo/: DEPLOY.md  README.md  package.json  vercel.json
knowgo/api/: index.ts
knowgo/api/scripts/: build-vercel-api.mjs
knowgo/web/backend/: package.json  tsconfig.json
knowgo/web/backend/src/: analyze.ts  app.ts  graphDb.ts  graphStore.ts  server.ts  store.ts
knowgo/web/frontend/: index.html  package.json  vite.config.ts
portal/: index.html  package.json  vite.config.ts
portal/src/: App.tsx  index.css
prerector/: DEPLOY.md  README.md  vercel.json
prerector/api/: _entry.ts  index.js
prerector/api/scripts/: build-vercel-api.mjs
prerector/web/backend/: package.json
prerector/web/frontend/: index.html  package.json  vite.config.ts
scripts/: build-vercel-portal.mjs
shared/: package.json
shared/src/: constants.ts  index.ts  types.ts
shared/src/instruments/: webInstruments.ts
shared/src/knowgo/: analyzeLocal.ts  datasetSync.ts  documentFromGraph.ts  graph.ts  graphSync.ts  styleDataset.ts  types.ts  urlParse.ts
shared/src/media/: extract.ts  types.ts
shared/src/prerector/: constants.ts  types.ts
simcut/: .gitignore  Cargo.toml  README.md
simcut/apps/desktop/: Cargo.toml  package.json  tauri.conf.json
simcut/apps/desktop/capabilities/: default.json
simcut/apps/desktop/icons/: icon.icns
simcut/apps/desktop/src/: ai_analysis.rs  export_service.rs  lib.rs  main.rs  project_service.rs
simcut/apps/desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts
simcut/apps/desktop/ui/src/: App.tsx  index.css  types.ts
simcut/apps/desktop/ui/src/components/color/: WaveformChart.tsx  WaveformScope.tsx
simcut/apps/desktop/ui/src/components/edit/: ResizableSplit.tsx
simcut/apps/desktop/ui/src/components/effects/: EffectPreview.tsx
simcut/apps/desktop/ui/src/components/export/: ExportDialog.tsx
simcut/apps/desktop/ui/src/components/layout/: Sidebar.tsx  TopBar.tsx  TransportBar.tsx
simcut/apps/desktop/ui/src/components/stills/: StillPreviewModal.tsx
simcut/apps/desktop/ui/src/components/timeline/: MediaBin.tsx  TimecodeRuler.tsx  Timeline.tsx
simcut/apps/desktop/ui/src/lib/: api.ts  aspectRatio.ts  captureFrame.ts  colorAnalysis.ts  effectPresets.ts  fonts.ts  mediaStore.ts  previewCache.ts  projectStore.ts  tauri.ts  textDesign.ts  timecode.ts  timelineEdit.ts  timelineLayout.ts  waveformMatch.ts  waveformScope.ts
simcut/apps/desktop/ui/src/views/: ColorView.tsx  EditView.tsx  EffectsView.tsx  FontsView.tsx  ProjectsView.tsx  StillsView.tsx  SubtitlesView.tsx
simcut/crates/color-engine/: Cargo.toml
simcut/crates/color-engine/src/: lib.rs
simcut/crates/timeline-engine/: Cargo.toml
simcut/crates/timeline-engine/src/: lib.rs
simcut/docs/: PRD.md
simcut/web/: README.md
simcut/web/frontend/: index.html  package.json  vite.config.ts
simcut/web/frontend/src/: App.tsx  index.css
simcut/web/frontend/src/components/edit/: AspectRatioPicker.tsx
simcut/web/frontend/src/lib/: mime.ts  tauri.ts  timelineLayout.ts  waveformMatch.ts
simcut/web/frontend/src/views/: AiView.tsx  ColorView.tsx  EffectsView.tsx  ProjectsView.tsx  StillsView.tsx  SubtitlesView.tsx  TextDesignView.tsx  TextView.tsx
web/backend/src/: app.ts  server.ts
web/frontend/: index.html  package.json  tsconfig.json  vite.config.ts
web/frontend/src/: App.tsx
web/frontend/src/lib/: api.ts  (+1 more)
(+75 files in other folders)
