[workspace]
resolver = "2"
members = [
    "crates/instruments",
    "crates/audio-engine",
    "apps/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["everec"]

[workspace.dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "aac", "mp3", "flac"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
