[workspace]
resolver = "2"
members = [
    "crates/timeline-engine",
    "crates/color-engine",
    "apps/desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["everec"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
