[package]
name = "desound-desktop"
description = "desound — professional sound design & music composition"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "desound_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desound"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audio-engine = { path = "../../crates/audio-engine" }
instruments = { path = "../../crates/instruments" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
