[workspace]
resolver = "2"
members = [".", "crates/instruments", "crates/audio-engine"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["everec"]

[workspace.dependencies]
cpal = "0.15"
symphonia = { version = "0.5", features = ["wav", "aac", "mp3", "flac"] }
crossbeam-channel = "0.5"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[package]
name = "desound-desktop"
description = "desound — desktop client (Tauri)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "desound_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "desound"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
audio-engine = { path = "crates/audio-engine" }
instruments = { path = "crates/instruments" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4"] }
