[package]
name = "simcut-desktop"
description = "Simcut — lightweight video editor for ultra-short content"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "simcut_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "simcut"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
timeline-engine = { path = "../../crates/timeline-engine" }
color-engine = { path = "../../crates/color-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
